objc2j/src/ru/andremoniy/objctojavacnv/antlr/output/PreprocessorParser.java
// $ANTLR 3.4 C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g 2012-11-06 23:09:13

package ru.andremoniy.objctojavacnv.antlr.output;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class PreprocessorParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASTERISK", "BACKSLASH", "COMMENT", "DEFINE", "DEFINED", "DIGIT", "ELIF", "ELSE", "ENDIF", "EXC", "ID", "IF", "IFDEF", "IFNDEF", "IMPORT", "INCLUDE", "LETTER", "L_BR", "L_UBR", "MINUS", "NUMBER", "PLUS", "POINTS3", "QUOTE", "RET", "R_BR", "R_UBR", "SINGLE_COMMENT", "SPECIAL_CHARS", "T_BACKSLASH", "T_BLOCK", "T_COND_OP", "T_DEFINE", "T_EXPRESSION", "T_EX_AND", "T_EX_COND", "T_EX_DEF", "T_EX_MATH", "T_EX_NOT", "T_EX_OP", "T_EX_OR", "T_EX_SNGL", "T_ID", "T_IF_DEFINE", "T_IF_ELSE", "T_IF_MAIN", "T_IF_NOT_DEFINE", "T_IF_SIMPLE", "T_IMPORT", "T_INCLUDE", "T_IN_BRACKETS", "T_NAME", "T_PARAM", "T_PATH", "T_REPLACE", "WS", "'&&'", "','", "'.'", "'/'", "'<='", "'=='", "'>='", "'\\'#\\''", "'||'"
    };

    public static final int EOF=-1;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int ASTERISK=4;
    public static final int BACKSLASH=5;
    public static final int COMMENT=6;
    public static final int DEFINE=7;
    public static final int DEFINED=8;
    public static final int DIGIT=9;
    public static final int ELIF=10;
    public static final int ELSE=11;
    public static final int ENDIF=12;
    public static final int EXC=13;
    public static final int ID=14;
    public static final int IF=15;
    public static final int IFDEF=16;
    public static final int IFNDEF=17;
    public static final int IMPORT=18;
    public static final int INCLUDE=19;
    public static final int LETTER=20;
    public static final int L_BR=21;
    public static final int L_UBR=22;
    public static final int MINUS=23;
    public static final int NUMBER=24;
    public static final int PLUS=25;
    public static final int POINTS3=26;
    public static final int QUOTE=27;
    public static final int RET=28;
    public static final int R_BR=29;
    public static final int R_UBR=30;
    public static final int SINGLE_COMMENT=31;
    public static final int SPECIAL_CHARS=32;
    public static final int T_BACKSLASH=33;
    public static final int T_BLOCK=34;
    public static final int T_COND_OP=35;
    public static final int T_DEFINE=36;
    public static final int T_EXPRESSION=37;
    public static final int T_EX_AND=38;
    public static final int T_EX_COND=39;
    public static final int T_EX_DEF=40;
    public static final int T_EX_MATH=41;
    public static final int T_EX_NOT=42;
    public static final int T_EX_OP=43;
    public static final int T_EX_OR=44;
    public static final int T_EX_SNGL=45;
    public static final int T_ID=46;
    public static final int T_IF_DEFINE=47;
    public static final int T_IF_ELSE=48;
    public static final int T_IF_MAIN=49;
    public static final int T_IF_NOT_DEFINE=50;
    public static final int T_IF_SIMPLE=51;
    public static final int T_IMPORT=52;
    public static final int T_INCLUDE=53;
    public static final int T_IN_BRACKETS=54;
    public static final int T_NAME=55;
    public static final int T_PARAM=56;
    public static final int T_PATH=57;
    public static final int T_REPLACE=58;
    public static final int WS=59;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public PreprocessorParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public PreprocessorParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return PreprocessorParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g"; }


    public static class code_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "code"
    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:44:1: code : ( code_fragment )+ EOF ;
    public final PreprocessorParser.code_return code() throws RecognitionException {
        PreprocessorParser.code_return retval = new PreprocessorParser.code_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        PreprocessorParser.code_fragment_return code_fragment1 =null;


        Object EOF2_tree=null;

        try {
            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:44:6: ( ( code_fragment )+ EOF )
            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:44:8: ( code_fragment )+ EOF
            {
            root_0 = (Object)adaptor.nil();


            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:44:8: ( code_fragment )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= ASTERISK && LA1_0 <= DIGIT)||(LA1_0 >= EXC && LA1_0 <= 68)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:44:8: code_fragment
            	    {
            	    pushFollow(FOLLOW_code_fragment_in_code156);
            	    code_fragment1=code_fragment();

            	    state._fsp--;

            	    adaptor.addChild(root_0, code_fragment1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_code161); 
            EOF2_tree = 
            (Object)adaptor.create(EOF2)
            ;
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "code"


    public static class smth_else_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "smth_else"
    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:48:1: smth_else : (~ ( DEFINE | IMPORT | IF | ELSE | ENDIF | IFDEF | IFNDEF | ELIF ) )+ ;
    public final PreprocessorParser.smth_else_return smth_else() throws RecognitionException {
        PreprocessorParser.smth_else_return retval = new PreprocessorParser.smth_else_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set3=null;

        Object set3_tree=null;

        try {
            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:49:2: ( (~ ( DEFINE | IMPORT | IF | ELSE | ENDIF | IFDEF | IFNDEF | ELIF ) )+ )
            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:49:4: (~ ( DEFINE | IMPORT | IF | ELSE | ENDIF | IFDEF | IFNDEF | ELIF ) )+
            {
            root_0 = (Object)adaptor.nil();


            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:49:4: (~ ( DEFINE | IMPORT | IF | ELSE | ENDIF | IFDEF | IFNDEF | ELIF ) )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==INCLUDE) ) {
                    alt2=1;
                }
                else if ( ((LA2_0 >= ASTERISK && LA2_0 <= COMMENT)||(LA2_0 >= DEFINED && LA2_0 <= DIGIT)||(LA2_0 >= EXC && LA2_0 <= ID)||(LA2_0 >= LETTER && LA2_0 <= 68)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:
            	    {
            	    set3=(Token)input.LT(1);

            	    if ( (input.LA(1) >= ASTERISK && input.LA(1) <= COMMENT)||(input.LA(1) >= DEFINED && input.LA(1) <= DIGIT)||(input.LA(1) >= EXC && input.LA(1) <= ID)||(input.LA(1) >= INCLUDE && input.LA(1) <= 68) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, 
            	        (Object)adaptor.create(set3)
            	        );
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "smth_else"


    public static class code_fragment_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "code_fragment"
    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:50:1: code_fragment : ( define_directive | import_declaration | if_simple_check_wrapper | if_define_block_wrapper | if_not_define_block_wrapper | smth_else );
    public final PreprocessorParser.code_fragment_return code_fragment() throws RecognitionException {
        PreprocessorParser.code_fragment_return retval = new PreprocessorParser.code_fragment_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        PreprocessorParser.define_directive_return define_directive4 =null;

        PreprocessorParser.import_declaration_return import_declaration5 =null;

        PreprocessorParser.if_simple_check_wrapper_return if_simple_check_wrapper6 =null;

        PreprocessorParser.if_define_block_wrapper_return if_define_block_wrapper7 =null;

        PreprocessorParser.if_not_define_block_wrapper_return if_not_define_block_wrapper8 =null;

        PreprocessorParser.smth_else_return smth_else9 =null;



        try {
            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:51:2: ( define_directive | import_declaration | if_simple_check_wrapper | if_define_block_wrapper | if_not_define_block_wrapper | smth_else )
            int alt3=6;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:51:4: define_directive
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_define_directive_in_code_fragment212);
                    define_directive4=define_directive();

                    state._fsp--;

                    adaptor.addChild(root_0, define_directive4.getTree());

                    }
                    break;
                case 2 :
                    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:52:4: import_declaration
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_import_declaration_in_code_fragment217);
                    import_declaration5=import_declaration();

                    state._fsp--;

                    adaptor.addChild(root_0, import_declaration5.getTree());

                    }
                    break;
                case 3 :
                    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:53:4: if_simple_check_wrapper
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_if_simple_check_wrapper_in_code_fragment222);
                    if_simple_check_wrapper6=if_simple_check_wrapper();

                    state._fsp--;

                    adaptor.addChild(root_0, if_simple_check_wrapper6.getTree());

                    }
                    break;
                case 4 :
                    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:54:4: if_define_block_wrapper
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_if_define_block_wrapper_in_code_fragment227);
                    if_define_block_wrapper7=if_define_block_wrapper();

                    state._fsp--;

                    adaptor.addChild(root_0, if_define_block_wrapper7.getTree());

                    }
                    break;
                case 5 :
                    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:55:4: if_not_define_block_wrapper
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_if_not_define_block_wrapper_in_code_fragment232);
                    if_not_define_block_wrapper8=if_not_define_block_wrapper();

                    state._fsp--;

                    adaptor.addChild(root_0, if_not_define_block_wrapper8.getTree());

                    }
                    break;
                case 6 :
                    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:56:4: smth_else
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_smth_else_in_code_fragment237);
                    smth_else9=smth_else();

                    state._fsp--;

                    adaptor.addChild(root_0, smth_else9.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "code_fragment"


    public static class ret_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ret"
    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:59:1: ret : ( RET )+ ;
    public final PreprocessorParser.ret_return ret() throws RecognitionException {
        PreprocessorParser.ret_return retval = new PreprocessorParser.ret_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token RET10=null;

        Object RET10_tree=null;

        try {
            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:59:5: ( ( RET )+ )
            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:59:7: ( RET )+
            {
            root_0 = (Object)adaptor.nil();


            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:59:7: ( RET )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==RET) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:59:7: RET
            	    {
            	    RET10=(Token)match(input,RET,FOLLOW_RET_in_ret248); 
            	    RET10_tree = 
            	    (Object)adaptor.create(RET10)
            	    ;
            	    adaptor.addChild(root_0, RET10_tree);


            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "ret"


    public static class if_not_define_block_wrapper_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "if_not_define_block_wrapper"
    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:61:1: if_not_define_block_wrapper : if_not_define_block -> ^( T_IF_NOT_DEFINE if_not_define_block ) ;
    public final PreprocessorParser.if_not_define_block_wrapper_return if_not_define_block_wrapper() throws RecognitionException {
        PreprocessorParser.if_not_define_block_wrapper_return retval = new PreprocessorParser.if_not_define_block_wrapper_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        PreprocessorParser.if_not_define_block_return if_not_define_block11 =null;


        RewriteRuleSubtreeStream stream_if_not_define_block=new RewriteRuleSubtreeStream(adaptor,"rule if_not_define_block");
        try {
            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:62:2: ( if_not_define_block -> ^( T_IF_NOT_DEFINE if_not_define_block ) )
            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:62:4: if_not_define_block
            {
            pushFollow(FOLLOW_if_not_define_block_in_if_not_define_block_wrapper258);
            if_not_define_block11=if_not_define_block();

            state._fsp--;

            stream_if_not_define_block.add(if_not_define_block11.getTree());

            // AST REWRITE
            // elements: if_not_define_block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 62:24: -> ^( T_IF_NOT_DEFINE if_not_define_block )
            {
                // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:62:27: ^( T_IF_NOT_DEFINE if_not_define_block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(T_IF_NOT_DEFINE, "T_IF_NOT_DEFINE")
                , root_1);

                adaptor.addChild(root_1, stream_if_not_define_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "if_not_define_block_wrapper"


    public static class if_not_define_block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "if_not_define_block"
    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:64:1: if_not_define_block : ( ifndef1 | ifndef2 ) ret main_code_block ( ELSE ret else_code_block )? ENDIF ;
    public final PreprocessorParser.if_not_define_block_return if_not_define_block() throws RecognitionException {
        PreprocessorParser.if_not_define_block_return retval = new PreprocessorParser.if_not_define_block_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ELSE16=null;
        Token ENDIF19=null;
        PreprocessorParser.ifndef1_return ifndef112 =null;

        PreprocessorParser.ifndef2_return ifndef213 =null;

        PreprocessorParser.ret_return ret14 =null;

        PreprocessorParser.main_code_block_return main_code_block15 =null;

        PreprocessorParser.ret_return ret17 =null;

        PreprocessorParser.else_code_block_return else_code_block18 =null;


        Object ELSE16_tree=null;
        Object ENDIF19_tree=null;

        try {
            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:65:2: ( ( ifndef1 | ifndef2 ) ret main_code_block ( ELSE ret else_code_block )? ENDIF )
            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:65:4: ( ifndef1 | ifndef2 ) ret main_code_block ( ELSE ret else_code_block )? ENDIF
            {
            root_0 = (Object)adaptor.nil();


            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:65:4: ( ifndef1 | ifndef2 )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==IFNDEF) ) {
                alt5=1;
            }
            else if ( (LA5_0==IF) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:65:5: ifndef1
                    {
                    pushFollow(FOLLOW_ifndef1_in_if_not_define_block277);
                    ifndef112=ifndef1();

                    state._fsp--;

                    adaptor.addChild(root_0, ifndef112.getTree());

                    }
                    break;
                case 2 :
                    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:65:15: ifndef2
                    {
                    pushFollow(FOLLOW_ifndef2_in_if_not_define_block281);
                    ifndef213=ifndef2();

                    state._fsp--;

                    adaptor.addChild(root_0, ifndef213.getTree());

                    }
                    break;

            }


            pushFollow(FOLLOW_ret_in_if_not_define_block284);
            ret14=ret();

            state._fsp--;

            adaptor.addChild(root_0, ret14.getTree());

            pushFollow(FOLLOW_main_code_block_in_if_not_define_block288);
            main_code_block15=main_code_block();

            state._fsp--;

            adaptor.addChild(root_0, main_code_block15.getTree());

            // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:67:3: ( ELSE ret else_code_block )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ELSE) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // C:\\sandbox\\objc2j\\src\\ru\\andremoniy\\objctojavacnv\\antlr\\Preprocessor.g:67:4: ELSE ret else_code_block
                    {
                    ELSE16=(Token)match(input,ELSE,FOLLOW_ELSE_in_if_not_define_block293); 
                    ELSE16_tree = 
                    (Object)adaptor.create(ELSE16)
                    ;
                    adaptor.addChild(root_0, ELSE16_tree);


                    pushFollow(FOLLOW_ret_in_if_not_define_block295);
                    ret17=ret();

                    state._fsp--;

                    adaptor.addChild(root_0, ret17.getTree());

                    pushFollow(FOLLOW_else_code_block_in_if_not_define_block300);
                    else_code_block18=else_code_block();

                    state._fsp--;

                    adaptor.addChild(root_0, else_code_block18.getTree());

                    }
                    break;

            }


            ENDIF19=(Token)match(input,ENDIF,FOLLOW_ENDIF_in_if_not_define_block307); 
            ENDIF19_tree = 
            (Object)adaptor.create(ENDIF19)
            ;
            adaptor.addChild(root_0, ENDIF19_tree);


            }

